# drake_example

./: CMakeLists.txt  README.md
manipulation/indy7/: CMakeLists.txt  indy7_command_receiver.cc  indy7_command_receiver.h  indy7_command_sender.cc  indy7_command_sender.h  indy7_constants.h  indy7_status_receiver.cc  indy7_status_receiver.h  indy7_status_sender.cc  indy7_status_sender.h  lcmt_indy7_command.hpp  lcmt_indy7_status.hpp
models/: cart_pole.sdf  double_pendulum.sdf  indy7.sdf
models/indy7/: indy7.sdf  indy7.urdf
notebook/: InverseKinematics.ipynb  test.ipynb
notebook/.ipynb_checkpoints/: InverseKinematics-checkpoint.ipynb  test-checkpoint.ipynb
src/: CMakeLists.txt  double_pendulum.cc  indy7_test.cc  main.cc  particle_test.cc
